# solana-billboard-dot-space

./: .env.example  .gitignore  CLAUDE.md  GROWTH_PLAYBOOK.md  LAUNCH_PLAN.md  README.md  TWITTER_PLAYBOOK.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vercel.json  vite.config.ts
api/: share.ts
public/: moderation.json
scripts/: dev-local.sh
solana-space/: Anchor.toml  CLAUDE.md  IMPLEMENTATION.md  codama.json  package.json  txtx.yml
solana-space/programs/solana-space/: Cargo.toml
solana-space/programs/solana-space/src/: constants.rs  error.rs  events.rs  lib.rs
solana-space/programs/solana-space/src/instructions/: buy_boost.rs  cancel_listing.rs  create_listing.rs  execute_purchase.rs  initialize.rs  mint_region.rs  mod.rs  update_region.rs  update_region_image.rs  update_region_link.rs
solana-space/programs/solana-space/src/state/: boosts.rs  canvas_state.rs  listing.rs  mod.rs
solana-space/runbooks/: README.md
solana-space/scripts/: initialize.ts  seed-local.ts  setup-usdc-dev.ts
solana-space/tests/: helpers.ts  solana-space.ts
src/: App.tsx  index.css
src/components/: ActivityRow.tsx  BoostDot.tsx  CanvasToolbar.tsx  ComingSoonCanvas.tsx  Countdown.tsx  ListingStatus.tsx  MarketplaceView.tsx  PixelCanvas.tsx  PurchasePanel.tsx  RegionMiniMap.tsx  RegionSidebar.tsx  SiteFooter.tsx  SolanaProvider.tsx  TrendingSidebar.tsx  WalletBalances.tsx  WalletButton.tsx
src/config/: env.ts
src/context/: MockRegionProvider.tsx  RegionContext.tsx
src/data/: previewRegions.ts
src/hooks/: useActivityEvents.ts  useAffordability.ts  useAnimatedImages.ts  useCanvasState.ts  useModerationList.ts  useNow.ts  useOnChainRegions.ts  useProgramTransactions.ts  useReducedMotion.ts
src/lib/: boosts.ts  shareImage.ts  shareMeta.ts  urls.ts
src/pages/: Activity.tsx  ComingSoon.tsx  Embed.tsx  Index.tsx  Policy.tsx  Preview.tsx  PreviewCard.tsx  (+1 more)
(+8 files in other folders)
